# sl-rl-motion-retargeting

./: .gitignore  README.md  cfg.py  environment.py  mocap_data_YuMi_affine_execute2.h5  mocap_ik_results_YuMi_g2o_similarity.h5  reinforce_learning.py  replayBuffer.py  test_execute.py  yumi_dual_arm_execute.py
datasets/: h5_parser.py
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/inspire_hand/: get_angle_act.h  get_angle_actRequest.h  get_angle_actResponse.h  get_angle_set.h  get_angle_setRequest.h  get_angle_setResponse.h  get_current.h  get_currentRequest.h  get_currentResponse.h  get_error.h  get_errorRequest.h  get_errorResponse.h  get_force_act.h  get_force_actRequest.h  get_force_actResponse.h  get_force_set.h  get_force_setRequest.h  get_force_setResponse.h  get_pos_act.h  get_pos_actRequest.h  get_pos_actResponse.h  get_pos_set.h  get_pos_setRequest.h  get_pos_setResponse.h  get_status.h  get_statusRequest.h  get_statusResponse.h  get_temp.h  get_tempRequest.h  get_tempResponse.h  set_angle.h  set_angleRequest.h  set_angleResponse.h  set_clear_error.h  set_clear_errorRequest.h  set_clear_errorResponse.h  set_current_limit.h  set_current_limitRequest.h  set_current_limitResponse.h  set_default_force.h  (+35 more)
devel/include/yumi_collision_checking/: yumi_execute.h  yumi_executeRequest.h  yumi_executeResponse.h
devel/include/yumi_robot_service/: yumi_execute.h  yumi_executeRequest.h  yumi_executeResponse.h
devel/lib/inspire_hand/: hand_control_client  handcontroltopicpublisher  handcontroltopicpublisher1  handcontroltopicsubscriber  handcontroltopicsubscriber1  inspire_hand
devel/lib/kdl_fk_solver/: TEST_KDL_FK_Solver
devel/lib/pkgconfig/: gazebo_mimic.pc  inspire_hand.pc  inspire_hand_description.pc  inspire_right_hand_moveit_config.pc  kdl_fk_solver.pc  yumi_collision_checking.pc  yumi_control.pc  yumi_cpp_api.pc  yumi_description.pc  yumi_moveit_config.pc  yumi_robot_service.pc  yumi_sign_language_robot_control.pc  yumi_sign_language_robot_moveit_config.pc  yumi_support.pc
devel/lib/python2.7/dist-packages/inspire_hand/srv/: __init__.py  _get_angle_act.py  _get_angle_set.py  _get_current.py  _get_error.py  _get_force_act.py  _get_force_set.py  _get_pos_act.py  _get_pos_set.py  _get_status.py  _get_temp.py  _set_angle.py  _set_clear_error.py  _set_current_limit.py  _set_default_force.py  _set_default_speed.py  _set_force.py  _set_force_clb.py  _set_gesture_no.py  _set_id.py  _set_pos.py  _set_redu_ratio.py  _set_reset_para.py  _set_save_flash.py  _set_speed.py  _set_user_def_angle.py
devel/lib/python2.7/dist-packages/yumi_collision_checking/srv/: __init__.py  _yumi_execute.py
devel/lib/python2.7/dist-packages/yumi_robot_service/srv/: _yumi_execute.py
devel/share/common-lisp/ros/inspire_hand/srv/: _package.lisp  _package_get_angle_act.lisp  _package_get_angle_set.lisp  _package_get_current.lisp  _package_get_error.lisp  _package_get_force_act.lisp  _package_get_force_set.lisp  _package_get_pos_act.lisp  _package_get_pos_set.lisp  _package_get_status.lisp  get_current.lisp  (+41 more)
devel/share/gazebo_mimic/cmake/: gazebo_mimicConfig.cmake
devel/share/inspire_hand/cmake/: inspire_hand-msg-extras.cmake  inspire_hand-msg-paths.cmake  inspire_handConfig.cmake
devel/share/inspire_hand_description/cmake/: inspire_hand_descriptionConfig.cmake
devel/share/inspire_right_hand_moveit_config/cmake/: inspire_right_hand_moveit_configConfig.cmake
devel/share/kdl_fk_solver/cmake/: kdl_fk_solverConfig.cmake
devel/share/roseus/ros/inspire_hand/: manifest.l
devel/share/roseus/ros/yumi_collision_checking/: manifest.l
devel/share/roseus/ros/yumi_robot_service/: manifest.l
devel/share/yumi_collision_checking/cmake/: yumi_collision_checking-msg-extras.cmake  yumi_collision_checking-msg-paths.cmake  yumi_collision_checkingConfig.cmake
devel/share/yumi_control/cmake/: yumi_controlConfig.cmake
devel/share/yumi_cpp_api/cmake/: yumi_cpp_apiConfig.cmake
devel/share/yumi_description/cmake/: yumi_descriptionConfig.cmake
devel/share/yumi_moveit_config/cmake/: yumi_moveit_configConfig.cmake
devel/share/yumi_robot_service/cmake/: yumi_robot_service-msg-extras.cmake  yumi_robot_service-msg-paths.cmake  yumi_robot_serviceConfig.cmake
devel/share/yumi_sign_language_robot_control/cmake/: yumi_sign_language_robot_controlConfig.cmake
devel/share/yumi_sign_language_robot_moveit_config/cmake/: yumi_sign_language_robot_moveit_configConfig.cmake
devel/share/yumi_support/cmake/: yumi_supportConfig.cmake
models/: DDPG.py
scripts/: test.ipynb
src/kdl_fk_solver/: CMakeLists.txt  package.xml
src/kdl_fk_solver/src/: KDL_FK_Solver.cpp  KDL_FK_Solver.h
src/yumi_collision_checking/: CMakeLists.txt  package.xml
src/yumi_collision_checking/include/: KDL_FK_Solver.h  collision_checking_yumi.h  h5_io.h
src/yumi_collision_checking/src/: collision_checking_yumi.cpp  h5_io.cpp  yumi_api_server.cpp
src/yumi_collision_checking/srv/: yumi_execute.srv
src/yumi_control/rviz/: urdf.rviz
src/yumi_cpp_api/: CMakeLists.txt  package.xml
src/yumi_cpp_api/include/: yumi_cpp_api.h
src/yumi_cpp_api/src/: yumi_cpp_api.cpp
src/yumi_robot_service/: CMakeLists.txt  package.xml
src/yumi_robot_service/srv/: yumi_execute.srv
src/yumi_sign_language_robot_control/: CMakeLists.txt
src/yumi_sign_language_robot_control/script/: yumi_sign_robot_execute_joint_path.py
(+64 files in other folders)
